--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -14,7 +14,7 @@ html,body{
 	height:100%;
 	margin:0;
 	padding:10px;
-	background-image: url(../images/ov6.png);
+	background-image: url(../images/bg-dark.jpg);
 	background-repeat: repeat;
 	color: #fff;
 	font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
@@ -22,10 +22,10 @@ html,body{
 	/*background: #020031;
 	background: -moz-linear-gradient(45deg,#020031 0,#6d3353 100%);
 	background: -webkit-gradient(linear,left bottom,right top,color-stop(0%,#020031),color-stop(100%,#6d3353));
-	 background: -webkit-linear-gradient(45deg,#020031 0,#6d3353 100%); 
+	background: -webkit-linear-gradient(45deg,#020031 0,#6d3353 100%); 
 	background: -o-linear-gradient(45deg,#020031 0,#6d3353 100%);
 	background: -ms-linear-gradient(45deg,#020031 0,#6d3353 100%);
-	 background: linear-gradient(45deg,#020031 0,#6d3353 100%); 
+	background: linear-gradient(45deg,#020031 0,#6d3353 100%); 
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#020031', endColorstr='#6d3353', GradientType=1);
 	-webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
 	-moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2),inset 0 -3px 7px rgba(0,0,0,.2);
@@ -37,9 +37,9 @@ html,body{
 
 /*后台管理css*/
 .bianfang_image{
-  width: 100px;
-  height: 100px;
-  border: 5px solid #fff;
+    width: 100px;
+    height: 100px;
+    border: 5px solid #fff;
 }
 .bian_name_left{
 	text-align: right;
