--- a/assets/styles/first-page.css
+++ b/assets/styles/first-page.css
@@ -2,7 +2,7 @@ body {
   background-color:#263238;
   align-items: center;
   text-align: center;
-  color: #F5F5F5;
+  color: #FAFAFA;
 
   position: fixed; 
   overflow-y: scroll;
