--- a/assets/styles/first-page.css
+++ b/assets/styles/first-page.css
@@ -11,7 +11,7 @@ body {
 }
 
 .bg-img {
-  background-size:     cover;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
@@ -21,5 +21,37 @@ a {
   width: 250px;
   height: 80px !important;
   margin: 30px !important;
+  text-decoration: none;
+}
+
+.frosted-glass {
+	display: -webkit-box;
+	display: inline-block;
+	-webkit-box-pack: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	align-items: center;
+	width: 20%;
+	height: 36vh;
+	box-shadow: 0 0.3px 0.7px rgba(0, 0, 0, 0.126), 0 0.9px 1.7px rgba(0, 0, 0, 0.179), 0 1.8px 3.5px rgba(0, 0, 0, 0.224), 0 3.7px 7.3px rgba(0, 0, 0, 0.277), 0 10px 20px rgba(0, 0, 0, 0.4);
+	-webkit-backdrop-filter: blur(20px);
+	backdrop-filter: blur(20px);
+	-webkit-transition: 0.5s ease;
+	transition: 0.5s ease;
+}
+
+.frosted-glass:hover {
+	box-shadow: 0 0.7px 1px rgba(0, 0, 0, 0.157), 0 1.7px 2.6px rgba(0, 0, 0, 0.224), 0 3.5px 5.3px rgba(0, 0, 0, 0.28), 0 7.3px 11px rgba(0, 0, 0, 0.346), 0 20px 30px rgba(0, 0, 0, 0.5);
+}
+
+.frosted-glass .title {
+	font-size: 30px;
+  color: white;
+}
+
+@media (max-width: 640px) {
+	.frosted-glass .title {
+    font-size: 2em;
+	}
 }
 
