--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -6,6 +6,8 @@ html,body{
 	margin:0;
 	padding:0;
 	font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
+	justify-content: center;
+	align-items: center;
 }
 
 .container-fluid{
@@ -117,6 +119,7 @@ h1.bian_name_left:hover, h1.bian_name_right:hover {
 	font-size: 20px !important;
 }
 
+/* Button Bubbles */
 .btn-bubbles {
 	overflow: visible;
 	transition: transform ease-in 0.1s, background-color ease-in 0.1s, box-shadow ease-in 0.25s;
@@ -181,8 +184,85 @@ h1.bian_name_left:hover, h1.bian_name_right:hover {
 	}
 }
 
+/* Loading Dot */
+#dot-gp {
+	padding-left: 43.5%;
+}
 
+.loading {
+	display: flex;
+	animation-delay: 1s;
+	padding-top: 100px;
+}
 
+.loading .dot {
+	position: relative;
+	width: 2em;
+	height: 2em;
+	margin: 0.8em;
+	border-radius: 50%;
+}
+
+.loading .dot::before {
+	position: absolute;
+	content: "";
+	width: 100%;
+	height: 100%;
+	background: inherit;
+	border-radius: inherit;
+	animation: wave 2s ease-out infinite;
+}
+
+.loading .dot:nth-child(1) {
+	background: #7ef9ff;
+}
+
+.loading .dot:nth-child(1)::before {
+	animation-delay: 0.2s;
+}
+
+.loading .dot:nth-child(2) {
+	background: #89cff0;
+}
+
+.loading .dot:nth-child(2)::before {
+	animation-delay: 0.4s;
+}
+
+.loading .dot:nth-child(3) {
+	background: #4682b4;
+}
+
+.loading .dot:nth-child(3)::before {
+	animation-delay: 0.6s;
+}
+
+.loading .dot:nth-child(4) {
+	background: #0f52ba;
+}
+
+.loading .dot:nth-child(4)::before {
+	animation-delay: 0.8s;
+}
+
+.loading .dot:nth-child(5) {
+	background: #000080;
+}
+
+.loading .dot:nth-child(5)::before {
+	animation-delay: 1s;
+}
+
+@keyframes wave {
+	50%,
+	75% {
+		transform: scale(2.5);
+	}
+	80%,
+	100% {
+		opacity: 0;
+	}
+}
 
 
 
